WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216091
Fix rounding for DelayDSPKernel's buffer size calculation
https://bugs.webkit.org/show_bug.cgi?id=216091
Summary
Fix rounding for DelayDSPKernel's buffer size calculation
Chris Dumez
Reported
2020-09-02 12:53:50 PDT
Fix rounding for DelayDSPKernel's buffer size calculation. The DelayNode needs to buffer |maxDelayTime| sample frames, plus one frame for interpolation. If |maxDelayTime| isn't an integer, we have to round it up or the buffer would end up one frame short.
Attachments
Patch
(4.23 KB, patch)
2020-09-02 12:55 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-02 12:55:08 PDT
Created
attachment 407789
[details]
Patch
Geoffrey Garen
Comment 2
2020-09-02 12:58:57 PDT
Comment on
attachment 407789
[details]
Patch r=me
Chris Dumez
Comment 3
2020-09-02 15:07:30 PDT
Comment on
attachment 407789
[details]
Patch Clearing flags on attachment: 407789 Committed
r266491
: <
https://trac.webkit.org/changeset/266491
>
Chris Dumez
Comment 4
2020-09-02 15:07:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-09-02 15:08:16 PDT
<
rdar://problem/68235721
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug