Fix rounding for DelayDSPKernel's buffer size calculation https://bugs.webkit.org/show_bug.cgi?id=216091

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline WPT test that is now passing.

* web-platform-tests/webaudio/the-audio-api/the-delaynode-interface/maxdelay-rounding-expected.txt:

Source/WebCore:

Fix rounding for DelayDSPKernel's buffer size calculation. The DelayNode needs to buffer
|maxDelayTime| sample frames, plus one frame for interpolation. If |maxDelayTime| isn't
an integer, we have to round it up or the buffer would end up one frame short.

No new tests, rebaselined existing test.

* Modules/webaudio/DelayDSPKernel.cpp:
(WebCore::DelayDSPKernel::bufferLengthForDelay const):

Canonical link: https://commits.webkit.org/228893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266491 268f45cc-cd09-0410-ab3c-d52691b4dbfc